Create LoginTab Screen

--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "animeasy",
     "version": "1.0.0",
     "orientation": "default",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/app/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
+      "image": "./assets/app/splash.png",
+      "resizeMode": "cover",
       "backgroundColor": "#03DAC5"
     },
     "updates": {
@@ -21,12 +21,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/app/adaptive-icon.png",
         "backgroundColor": "#03DAC5"
       }
     },
     "web": {
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/app/favicon.png"
     }
   }
 }
